--- a/ls.html
+++ b/ls.html
@@ -260,7 +260,7 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
-							<div class="img" style="background-image: url(images/chef-1.jpg);"></div>
+							<div class="img" style="background-image: url(images/WhatsApp\ Image\ 2022-11-09\ at\ 17.00.27.jpeg);"></div>
 							<div class="text px-4 pt-4">
 								<h3>Джайбергенов Алибек</h3>
 								<span class="position mb-2">Бармен</span>
