--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       	<div class="overlay"></div>
         <div class="container-fluid p-0">
           <div class="row d-md-flex no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
-          	<div class="one-third order-md-last img js-fullheight" style="background-image:url(images/bg_3.jpg);">
+          	<div class="one-third order-md-last img js-fullheight" style="background-image:url(images/WhatsApp\ Image\ 2022-11-09\ at\ 17.06.52.jpeg);">
           		<div class="overlay"></div>
           	</div>
 	          <div class="one-forth d-flex js-fullheight align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -86,7 +86,7 @@
       	<div class="overlay"></div>
         <div class="container-fluid p-0">
           <div class="row d-flex no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
-          	<div class="one-third order-md-last img js-fullheight" style="background-image:url(images/bg_2.jpg);">
+          	<div class="one-third order-md-last img js-fullheight" style="background-image:url(images/WhatsApp\ Image\ 2022-11-09\ at\ 17.10.48.jpeg);">
           		<div class="overlay"></div>
           	</div>
 	          <div class="one-forth d-flex js-fullheight align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
